--- a/VUE模板页/package.json
+++ b/VUE模板页/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.10.1",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
